fixed context, tests
